@@ -31,6 +31,7 @@ public class JwtValidationFilter implements GlobalFilter, Ordered {
         String path = exchange.getRequest().getPath().toString();
 
         if (path.startsWith("/auth/") || path.startsWith("/api/patient/") || path.startsWith("/doctor/")) {
+
             return chain.filter(exchange);
         }
 
@@ -38,7 +39,7 @@ public class JwtValidationFilter implements GlobalFilter, Ordered {
             return setUnauthorizedResponse(exchange);
         }
 
-        String jwt = cookies.get("jwt").getFirst().getValue();
+        String jwt = cookies.get("jwt").get(0).getValue();
         try {
             if (!jwtUtils.validateJwtToken(jwt)) {
                 return setUnauthorizedResponse(exchange);
